-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 11.0.0-beta1
-
None
-
015d12ccf (master)
From comment in QTCREATORBUG-27771:
"Unfortunately, it doesn't work with fakevim enabled: the completion appears but "tab" doesn't insert it (it works with fakevim disabled)."
- relates to
-
QTCREATORBUG-28837 Qt Creator crash upon github copilot autocompletion with fakevim
-
- Closed
-
- split from
-
QTCREATORBUG-27771 GitHub Copilot support
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-28830 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 474758,14 | FakeVim: Accept suggestion with Tab Key | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |